--- a/website/docs/models/index.mdx
+++ b/website/docs/models/index.mdx
@@ -1,12 +1,12 @@
-import { GitHubReadme } from "react-github-readme-md";
-
 ---
 sidebar_position: 4
 ---
 
-# 🧑‍🔬 Models Directory
+import GitHubReadme from "./readme";
 
-<GithubReadme username="TabbyML" repo="registry-tabby" />
+# 🧑‍🔬 Models Registry
+
+<GitHubReadme src="https://raw.githubusercontent.com/TabbyML/registry-tabby/main/README.md" />
 
 ## Alternative Registry
 
